# Keiimgui

./: settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/keiaxiro/keiimgui/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  drawUI.h  main.cpp  main.h  native-lib.cpp
app/src/main/cpp/ImGui/: imgui.cpp  style.h
app/src/main/java/com/keiaxiro/keiimgui/: GLES3JNIView.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/keiaxiro/keiimgui/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
